--- a/docker/Dockerfile.tmpl
+++ b/docker/Dockerfile.tmpl
@@ -6,8 +6,9 @@ RUN apt-get update -y && \
     apt-get install -y --no-install-recommends \
     python3-dev \
     python3-pip \
-    python3-wheel \
+    python3-pytest \
     python3-setuptools \
+    python3-wheel \
     git \
     g++ \
     make \
