Add an option to dump output values

--- a/runtime/xcvm.proto.tmpl
+++ b/runtime/xcvm.proto.tmpl
@@ -46,6 +46,7 @@ message XCInstructionProto {
     optional string debug_info = 4;
     optional int64 id = 5;
     repeated XCTypeProto output_types = 6;
+    repeated string output_names = 7;
 }
 
 message XCProgramProto {
