--- a/docker/Dockerfile.tmpl
+++ b/docker/Dockerfile.tmpl
@@ -4,26 +4,34 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends \
+    autoconf \
+    automake \
+    build-essential \
+    cmake \
+    curl \
+    g++ \
+    git \
+    git \
+    libblas-dev \
+    libblas3 \
+    libopencv-dev \
+    libprotobuf-dev \
+    libtinfo-dev \
+    libtool \
+    llvm-6.0-dev \
+    make \
+    ninja-build \
+    pkg-config \
+    protobuf-compiler \
     python3-dev \
     python3-pip \
     python3-pytest \
     python3-setuptools \
     python3-wheel \
-    git \
-    g++ \
-    make \
-    cmake \
-    libblas3 \
-    libblas-dev \
-    git \
-    curl \
+    unzip \
     wget \
-    build-essential \
-    libprotobuf-dev \
-    protobuf-compiler \
-    libopencv-dev \
-    llvm-6.0-dev \
-    ninja-build \
+    zlib1g \
+    zlib1g-dev \
     && \
     rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 
@@ -54,6 +62,24 @@ RUN mkdir -p /usr/tvm/3rdparty/dmlc-core/build && \
     cd /usr/tvm/3rdparty/dmlc-core/build && \
     cmake .. && make && make install
 
+ARG NGRAPH_VERSION="v0.15.0-rc.0"
+ARG NGRAPH_INTELGPU_ENABLE="ON"
+RUN git clone https://github.com/NervanaSystems/ngraph.git \
+    && cd ngraph \
+    && git checkout $NGRAPH_VERSION \
+    && mkdir build && cd build \
+    && cmake .. -DNGRAPH_ONNX_IMPORT_ENABLE=ON -DNGRAPH_USE_PREBUILT_LLVM=ON -DNGRAPH_INTELGPU_ENABLE=$NGRAPH_INTELGPU_ENABLE -DCMAKE_INSTALL_PREFIX=~/ngraph_dist \
+    && make -j4 \
+    && make install
+
+RUN cd ngraph/python \
+    && git clone --recursive https://github.com/pybind/pybind11.git \
+    && pip3 install .
+
+RUN git clone https://github.com/NervanaSystems/ngraph-onnx/ \
+    && cd ngraph-onnx \
+    && pip3 install .
+
 RUN git clone https://%GITHUB_AUTH_TOKEN%:x-oauth-basic@github.com/pfnet-research/chainer-compiler.git
 RUN cd /chainer-compiler && git submodule update --init
 RUN mkdir -p chainer-compiler/build && \
@@ -66,6 +92,7 @@ RUN mkdir -p chainer-compiler/build && \
     -DCHAINER_COMPILER_ENABLE_CUDNN=ON \
     -DCHAINER_COMPILER_ENABLE_OPENCV=ON \
     -DCHAINER_COMPILER_ENABLE_PYTHON=ON \
+    -DCHAINER_COMPILER_NGRAPH_DIR=$HOME/ngraph_dist \
     -DPYTHON_EXECUTABLE=/usr/bin/python3 \
     -DCHAINER_COMPILER_ENABLE_TVM=ON \
     -DCHAINERX_BUILD_CUDA=ON \
