Use libopenblas instead of libblas

--- a/docker/Dockerfile.tmpl
+++ b/docker/Dockerfile.tmpl
@@ -12,8 +12,7 @@ RUN apt-get update -y && \
     g++ \
     git \
     git \
-    libblas-dev \
-    libblas3 \
+    libopenblas-dev \
     libopencv-dev \
     libprotobuf-dev \
     libtinfo-dev \
