Show FLOPs in chrome tracing

--- a/runtime/xcvm.proto.tmpl
+++ b/runtime/xcvm.proto.tmpl
@@ -47,6 +47,7 @@ message XCInstructionProto {
     optional int64 id = 5;
     repeated XCTypeProto output_types = 6;
     repeated string output_names = 7;
+    optional int64 flops = 8;
 }
 
 message XCProgramProto {
