Do not use StackVector for IntConstant

--- a/runtime/xcvm.proto.tmpl
+++ b/runtime/xcvm.proto.tmpl
@@ -15,6 +15,7 @@ message XCValueProto {
         STRING = 9;
         LONGS = 10;
         DOUBLES = 11;
+        INT_VALUES = 12;
     }
 
     required Type type = 1;
