--- a/runtime/chxvm.proto.tmpl
+++ b/runtime/chxvm.proto.tmpl
@@ -17,6 +17,7 @@ message XCValueProto {
         DOUBLES = 11;
         INT_VALUES = 12;
         SHAPE = 13;
+        SCALAR = 14;
     }
 
     required Type type = 1;
@@ -30,6 +31,7 @@ message XCValueProto {
     repeated double doubles = 10;
     optional int32 opaque = 11;
     optional int32 shape = 12;
+    optional int32 scalar = 13;
 }
 
 message XCTypeProto {
