Introduce OptionalScalar type

--- a/runtime/chxvm.proto.tmpl
+++ b/runtime/chxvm.proto.tmpl
@@ -18,6 +18,7 @@ message XCValueProto {
         INT_VALUES = 12;
         SHAPE = 13;
         SCALAR = 14;
+        OPTIONAL_SCALAR = 15;
     }
 
     required Type type = 1;
